Remove welcome page from pre-populated Most Visited

The URL is incorrect due to the welcome page migration (it currently redirects to chrome.com). Also, users have already been through the first run UX, so the welcome page is not really needed.

Bug: 824038
Change-Id: I739e920e2fd4f4498226a04e162b29f2ed1011c7
Reviewed-on: https://chromium-review.googlesource.com/1006186
Commit-Queue: Kristi Park <kristipark@chromium.org>
Reviewed-by: Marc Treib <treib@chromium.org>
Reviewed-by: agrieve <agrieve@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551388}
Former-commit-id: 9c11f4dbfe0886b9e685b58a526895fe2eb836e7